<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.UserDataFragment">

    <ImageButton
        android:id="@+id/image_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_19dp"
        android:layout_marginTop="@dimen/margin_52dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/contentDescription_back_button"
        android:src="@drawable/ic_ico_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_contact_details"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_19dp"
        android:layout_marginTop="@dimen/margin_109dp"
        android:text="@string/text_contact_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photo_frame"
        android:layout_width="@dimen/photo_frame_width"
        android:layout_height="@dimen/photo_frame_height"
        android:layout_marginStart="@dimen/margin_132dp"
        android:layout_marginTop="@dimen/margin_60dp"
        android:layout_marginEnd="@dimen/margin_132dp"
        android:contentDescription="@string/contentDescription_user_photo"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_contact_details" />

    <TextView
        android:id="@+id/text_name"
        style="@style/TextHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_19dp"
        android:layout_marginTop="@dimen/margin_59dp"
        android:text="@string/text_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_frame" />

    <TextView
        android:id="@+id/text_name_data"
        style="@style/TextData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_19dp"
        android:layout_marginTop="@dimen/margin_7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_email"
        style="@style/TextHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_19dp"
        android:layout_marginTop="@dimen/margin_66dp"
        android:text="@string/text_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name_data" />

    <TextView
        android:id="@+id/text_email_data"
        style="@style/TextData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_19dp"
        android:layout_marginTop="@dimen/margin_7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

    <Button
        android:id="@+id/button_back"
        style="@style/ButtonBorderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_18dp"
        android:layout_marginEnd="@dimen/margin_18dp"
        android:layout_marginBottom="@dimen/margin_58dp"
        android:text="@string/button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>