<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.HomeFragment">

    <TextView
        android:id="@+id/text_title"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_123dp"
        android:layout_marginTop="@dimen/margin_109dp"
        android:layout_marginEnd="@dimen/margin_123dp"
        android:text="@string/text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_subtitle"
        style="@style/TextSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_97dp"
        android:layout_marginTop="@dimen/margin_79dp"
        android:layout_marginEnd="@dimen/margin_97dp"
        android:text="@string/text_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />


    <ImageView
        android:id="@+id/your_qrcode_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_58dp"
        android:layout_marginTop="@dimen/margin_29dp"
        android:layout_marginEnd="@dimen/margin_58dp"
        android:background="@drawable/qrcode_frame"
        android:contentDescription="@string/contentDescription_your_qrcode"
        android:elevation="5dp"
        android:src="@drawable/qrcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_subtitle" />

    <Button
        android:id="@+id/button_first"
        style="@style/ButtonDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_18dp"
        android:layout_marginEnd="@dimen/margin_18dp"
        android:layout_marginBottom="@dimen/margin_58dp"
        android:background="@drawable/button_background"
        android:text="@string/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>